1.4.26:
 * Fixed a rare bug in which undeleting a note via "undo" sometimes does not
   show the undeleted note even if the undelete is successful.

1.4.25: August 11, 2008:
 * Fixed a bug in which the character encoding of uploaded CSV files was not
   properly detected and used to decode the file. Note that this fix
   introduces a new dependency: http://chardet.feedparser.org/ found in the
   python-chardet package.

1.4.24: August 11, 2008:
 * Added a light gray line under note title text to make it clearer that it's
   a title as opposed to just bold text.
 * Fixed a bug in Firefox 3 in which disabling title text did not work.
 * Fixed a bug in Firefox 2 and 3 in which pasting a paragraph tag into a
   note caused the enter key to change from inserting a line break tag to
   inserting a paragraph tag.

1.4.23: August 11, 2008:
 * New notebook import feature for importing notes from a CSV file. (Beta.)
 * Enforcing maximum note length after stripping the note of any disallowed
   HTML tags instead of before. This makes Luminotes work better when cutting
   and pasting lots of text from MS Word.

1.4.22: August 1, 2008:
 * Skipping clearing of messages/errors if they haven't been open long enough
   to read.
 * Fixed a bug in which renaming a link title and then pressing ctrl-L would
   replace the link destination.

1.4.21: July 30, 2008:
 * Fixed bug in IE 7 in which there was too much horizontal spacing at very
   wide resolutions.
 * Increased speed of note hiding animations.

1.4.20: July 30, 2008:
 * By popular demand, added a "save" button that becomes grayed out when
   everything is saved.
 * Now displaying "saving" status text in addition to "loading".
 * Made both left and right navigation areas of the page have a fixed
   position, so they stay in one spot even when you scroll your notes.

1.4.19: July 29, 2008:
 * When scrolling to and then highlighting a note, do so serially instead of
   in parallel.