@@ -1,4 +1,8 @@
 1.4.26:
+ * Ported all database code to support SQLite in addition to existing the
+   PostgreSQL support. This is a necessary first step for Luminotes Desktop.
+ * Updated all unit tests to test against an in-memory SQLite database. This
+   increases unit test code coverage to include Luminotes SQL code.
  * Fixed a rare bug in which undeleting a note via "undo" sometimes does not
    show the undeleted note even if the undelete is successful.
 
